--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch src/MockData/db.json --port 5000"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
-    "react-redux": "^8.0.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0",
     "scss": "^0.2.4"
